@@ -354,6 +354,7 @@ There is NO WARRANTY, to the extent permitted by law.
 .BR groups (1)
 .BR kill (1)
 .BR ldd (1)
+.BR locale (1)
 .BR ls (1)
 .BR mount (1)
 .BR proc (5)
